parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__if.snap
---
source: parser/src/parser/parser.rs
description: "if a: pass"
---
Module {
    node: Node {
        start: 0,
        end: 10,
    },
    body: [
        IfStatement(
            If {
                node: Node {
                    start: 0,
                    end: 10,
                },
                test: Name(
                    Name {
                        node: Node {
                            start: 3,
                            end: 4,
                        },
                        id: "a",
                    },
                ),
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 6,
                                end: 10,
                            },
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
}
