parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__lambda-3.snap
---
source: parser/src/parser/parser.rs
description: "lambda a, b: a"
---
Module {
    node: Node {
        start: 0,
        end: 14,
    },
    body: [
        ExpressionStatement(
            Lambda(
                Lambda {
                    node: Node {
                        start: 0,
                        end: 14,
                    },
                    args: Arguments {
                        node: Node {
                            start: 7,
                            end: 11,
                        },
                        posonlyargs: [],
                        args: [
                            Arg {
                                node: Node {
                                    start: 7,
                                    end: 8,
                                },
                                arg: "a",
                                annotation: None,
                            },
                            Arg {
                                node: Node {
                                    start: 10,
                                    end: 11,
                                },
                                arg: "b",
                                annotation: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                    },
                    body: Name(
                        Name {
                            node: Node {
                                start: 13,
                                end: 14,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
