parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__lambda-9.snap
---
source: parser/src/parser/parser.rs
description: "lambda a=1 : a,"
---
Module {
    node: Node {
        start: 0,
        end: 15,
    },
    body: [
        ExpressionStatement(
            Tuple(
                Tuple {
                    node: Node {
                        start: 0,
                        end: 15,
                    },
                    elements: [
                        Lambda(
                            Lambda {
                                node: Node {
                                    start: 0,
                                    end: 14,
                                },
                                args: Arguments {
                                    node: Node {
                                        start: 7,
                                        end: 10,
                                    },
                                    posonlyargs: [],
                                    args: [
                                        Arg {
                                            node: Node {
                                                start: 7,
                                                end: 10,
                                            },
                                            arg: "a",
                                            annotation: None,
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kw_defaults: [],
                                    kwarg: None,
                                    defaults: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 9,
                                                    end: 10,
                                                },
                                                value: Int(
                                                    "1",
                                                ),
                                            },
                                        ),
                                    ],
                                },
                                body: Name(
                                    Name {
                                        node: Node {
                                            start: 13,
                                            end: 14,
                                        },
                                        id: "a",
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
