parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__list-7.snap
---
source: parser/src/parser/parser.rs
description: "month_names = ['Januari', 'Februari', 'Maart',      # These are the\n               'April',   'Mei',      'Juni',       # Dutch names\n               'Juli',    'Augustus', 'September',  # for the months\n               'Oktober', 'November', 'December']   # of the year"
---
Module {
    node: Node {
        start: 0,
        end: 268,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 252,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 11,
                            },
                            id: "month_names",
                        },
                    ),
                ],
                value: List(
                    List {
                        node: Node {
                            start: 14,
                            end: 252,
                        },
                        elements: [
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 15,
                                        end: 24,
                                    },
                                    value: Str(
                                        "Januari",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 26,
                                        end: 36,
                                    },
                                    value: Str(
                                        "Februari",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 38,
                                        end: 45,
                                    },
                                    value: Str(
                                        "Maart",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 83,
                                        end: 90,
                                    },
                                    value: Str(
                                        "April",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 94,
                                        end: 99,
                                    },
                                    value: Str(
                                        "Mei",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 106,
                                        end: 112,
                                    },
                                    value: Str(
                                        "Juni",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 149,
                                        end: 155,
                                    },
                                    value: Str(
                                        "Juli",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 160,
                                        end: 170,
                                    },
                                    value: Str(
                                        "Augustus",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 172,
                                        end: 183,
                                    },
                                    value: Str(
                                        "September",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 218,
                                        end: 227,
                                    },
                                    value: Str(
                                        "Oktober",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 229,
                                        end: 239,
                                    },
                                    value: Str(
                                        "November",
                                    ),
                                },
                            ),
                            Constant(
                                Constant {
                                    node: Node {
                                        start: 241,
                                        end: 251,
                                    },
                                    value: Str(
                                        "December",
                                    ),
                                },
                            ),
                        ],
                    },
                ),
            },
        ),
    ],
}
